# googledoc-revision-tracker

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  doc_sync.py  documents.yaml.example  drive_revisions.py  main.py  pyproject.toml  research.md
.github/workflows/: type-check.yml
specs/001-ty-type-checking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ty-type-checking/checklists/: requirements.md
specs/001-ty-type-checking/contracts/: cicd-integration.md  cli-interface.md  configuration-schema.md
