[project]
name = "google-sync-simple"
version = "0.1.0"
description = "A Python CLI tool to download and track Google Docs content and revision history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.149.0",
    "google-auth-oauthlib>=1.2.0",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
    "urllib3>=2.2.0",
]

[project.scripts]
google-sync = "main:app"

[tool.setuptools]
py-modules = ["drive_revisions", "main"]
