[project]
name = "google-sync-simple"
version = "0.1.0"
description = "A Python CLI tool to download and track Google Docs content and revision history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.149.0",
    "google-auth-oauthlib>=1.2.0",
    "pyyaml>=6.0.3",
    "typer>=0.20.0",
    "urllib3>=2.2.0",
]

[project.scripts]
google-sync = "main:app"

[tool.setuptools]
py-modules = ["drive_revisions", "main"]

[dependency-groups]
dev = [
    "hypothesis>=6.148.8",
    "pytest>=9.0.2",
    "ty>=0.0.8",
]

# ty Type Checker Configuration
[tool.ty]
# Start with gradual typing - don't require all code to be typed
# strict = false

# Target Python 3.12 (project minimum)
# python_version = "3.12"

# Show error codes for easier documentation lookup
# show_error_codes = true

[tool.ty.src]
# Exclude virtual environment and cache directories
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
]

# Configure rule severities
[tool.ty.rules]
# Critical: Must fix before merge
# type-mismatch = "error"
# unknown-attribute = "error"
# wrong-argument-type = "error"

# Important: Should fix but can warn
# missing-return-type = "warning"
# unreachable-code = "warning"
